fix(artifacts): close root file stream in EmbeddedDocumentExtractor to stop FD leak